some additional tests