@@ -3,9 +3,9 @@ package com.example.server.controller;
 import com.example.server.entity.Document;
 import com.example.server.entity.Extraction;
 import com.example.server.rest.dto.DocumentAndExtractionDTO;
-import com.example.server.rest.dto.ExtractionPostDTO;
 import com.example.server.rest.dto.DocumentGetDTO;
 import com.example.server.rest.dto.ExtractionGetDTO;
+import com.example.server.rest.dto.ExtractionPostDTO;
 import com.example.server.rest.mapper.DTOMapper;
 import com.example.server.service.ExtractionService;
 import com.example.server.service.UserService;
@@ -17,11 +17,10 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.ResponseEntity;
 
-import java.io.IOException;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
 class ExtractionControllerTest {
@@ -32,11 +31,14 @@ class ExtractionControllerTest {
     @Mock
     private UserService userService;
 
-    @Mock
-    private HttpServletRequest request;
-
     @InjectMocks
     private ExtractionController extractionController;
+
+    @Mock
+    private DTOMapper dtoMapper;
+
+    @Mock
+    private HttpServletRequest httpServletRequest;
 
     @BeforeEach
     void setUp() {
@@ -44,40 +46,45 @@ class ExtractionControllerTest {
     }
 
     @Test
-    void testGetDocumentsAndExtractions() throws IOException {
+    void testGetDocumentsAndExtractions() throws Exception {
         // Arrange
         String username = "testUser";
         String projectName = "testProject";
 
-        List<Document> documents = List.of(new Document());
-        List<Extraction> extractions = List.of(new Extraction());
+        Document document = new Document();
+        document.setId(1L);
+        Extraction extraction = new Extraction();
+        extraction.setId(1L);
+
+        List<Document> documents = Arrays.asList(document);
+        List<Extraction> extractions = Arrays.asList(extraction);
+
+        DocumentGetDTO documentGetDTO = new DocumentGetDTO();
+        ExtractionGetDTO extractionGetDTO = new ExtractionGetDTO();
+
         when(extractionService.getExtractionDocuments(username, projectName)).thenReturn(documents);
         when(extractionService.getExtractions(username, projectName)).thenReturn(extractions);
-
-        DocumentGetDTO documentDTO = new DocumentGetDTO();
-        ExtractionGetDTO extractionDTO = new ExtractionGetDTO();
-
-        mockStatic(DTOMapper.class);
-        when(DTOMapper.INSTANCE.convertEntityToDocumentGetDTO(any(Document.class))).thenReturn(documentDTO);
-        when(DTOMapper.INSTANCE.convertEntityToExtractionGetDTO(any(Extraction.class))).thenReturn(extractionDTO);
+        when(dtoMapper.convertEntityToDocumentGetDTO(document)).thenReturn(documentGetDTO);
+        when(dtoMapper.convertEntityToExtractionGetDTO(extraction)).thenReturn(extractionGetDTO);
 
         // Act
         ResponseEntity<DocumentAndExtractionDTO> response = extractionController.getDocumentsAndExtractions(
-                projectName, username, request);
+                projectName, username, httpServletRequest);
 
         // Assert
-        assertNotNull(response);
         assertEquals(200, response.getStatusCodeValue());
-        assertEquals(1, response.getBody().getDocuments().size());
-        assertEquals(1, response.getBody().getExtractions().size());
+        DocumentAndExtractionDTO responseBody = response.getBody();
+        assert responseBody != null;
+        assertEquals(1, responseBody.getDocuments().size());
+        assertEquals(1, responseBody.getExtractions().size());
 
-        verify(userService).validateToken(request);
-        verify(extractionService).getExtractionDocuments(username, projectName);
-        verify(extractionService).getExtractions(username, projectName);
+        verify(userService, times(1)).validateToken(httpServletRequest);
+        verify(extractionService, times(1)).getExtractionDocuments(username, projectName);
+        verify(extractionService, times(1)).getExtractions(username, projectName);
     }
 
     @Test
-    void testPostExtractions() throws IOException {
+    void testPostExtractions() throws Exception {
         // Arrange
         String username = "testUser";
         String projectName = "testProject";
@@ -85,41 +92,18 @@ class ExtractionControllerTest {
         ExtractionPostDTO extractionPostDTO = new ExtractionPostDTO();
         Extraction extraction = new Extraction();
 
-        mockStatic(DTOMapper.class);
-        when(DTOMapper.INSTANCE.convertExtractionPostDTOToEntity(extractionPostDTO)).thenReturn(extraction);
-        doNothing().when(extractionService).addExtraction(extraction);
+        when(dtoMapper.convertExtractionPostDTOToEntity(extractionPostDTO)).thenReturn(extraction);
 
         // Act
         ResponseEntity<String> response = extractionController.postExtractions(
-                projectName, username, extractionPostDTO, request);
+                projectName, username, extractionPostDTO, httpServletRequest);
 
         // Assert
-        assertNotNull(response);
         assertEquals(200, response.getStatusCodeValue());
         assertEquals("Extraction started successfully", response.getBody());
 
-        verify(userService).validateToken(request);
-        verify(extractionService).addExtraction(extraction);
-    }
-
-    @Test
-    void testGetOneExtraction() throws IOException {
-        // Arrange
-        String username = "testUser";
-        String projectName = "testProject";
-        String documentName = "testDocument";
-
-        doNothing().when(userService).validateToken(request);
-
-        // Act
-        ResponseEntity<String> response = extractionController.getOneExtraction(
-                documentName, projectName, username, request);
-
-        // Assert
-        assertNotNull(response);
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals("s", response.getBody());
-
-        verify(userService).validateToken(request);
+        verify(userService, times(1)).validateToken(httpServletRequest);
+        verify(dtoMapper, times(1)).convertExtractionPostDTOToEntity(extractionPostDTO);
+        verify(extractionService, times(1)).addExtraction(extraction);
     }
 }
